<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:menu="@menu/menu_bottom"
        app:title="Edit Profile" />

    <ImageView
        android:id="@+id/IVUserProfileImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/default_user_photo" />

    <TextView
        android:id="@+id/TVEditProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/name"
        android:textSize="16sp"  />

    <EditText
        android:id="@+id/ETEditProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="name" />

    <TextView
        android:id="@+id/TVEditProfileContactNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:text="@string/contact_number"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/ETEditProfilePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="phone"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="phone" />

    <TextView
        android:id="@+id/TVEditProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/email"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/ETEditProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="emailAddress" />

    <TextView
        android:id="@+id/TVEditProfileGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/gender"
        android:textSize="16sp"  />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/RBtnEditProfileMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/RBtnEditProfileFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/RBtnEditProfileOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />
    </RadioGroup>

    <TextView
        android:id="@+id/TVEditProfileBirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/date_of_birth"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/ETEditProfileBirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="date"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/TVEditProfilePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/password"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/ETEditProfilePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:text="@string/dots"
        android:autofillHints="password" />

    <TextView
        android:id="@+id/TVEditProfilePasswordExplain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/must_include_at_least_1_uppercase_letter_lowercase_letter_numeric_character_and_special_character"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/TVEditProfileConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/confirm_password"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/ETEditProfileConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:autofillHints="password"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/BtnEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/edit_profile" />
</LinearLayout>