<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/TBSignUpAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.ActionBar"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/TBSignUpAct"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/TVSignUpUsername"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"/>

            <EditText
                android:id="@+id/ETSignUpUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/TVSignUpUsernameExist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username_already_exist_try_another"
                android:textColor="?attr/colorPrimary"
                android:visibility="gone" />

            <TextView
                android:id="@+id/TVSignUpEmail"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="4dp" />

            <EditText
                android:id="@+id/ETSignUpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/TVSignUpEmailExist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_already_register_try_another_email"
                android:textColor="?attr/colorPrimary"
                android:visibility="gone" />

            <TextView
                android:id="@+id/TVSignUpName"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginTop="4dp" />

            <EditText
                android:id="@+id/ETSignUpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/TVSignUpExplainNamePurpose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/for_table_ordering_purpose"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/TVSignUpContactNumber"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_number"
                android:layout_marginTop="4dp" />

            <EditText
                android:id="@+id/ETSignUpPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:ems="10"
                android:inputType="phone"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/TVSignUpGender"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_marginTop="4dp" />

            <RadioGroup
                android:id="@+id/RGSignUpGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/RBtnMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/RBtnFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

            </RadioGroup>

            <TextView
                android:id="@+id/TVSignUpBirthDate"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:layout_marginTop="4dp"/>

            <EditText
                android:id="@+id/ETSignUpBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/TVSignUpDateFormatExplain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_date_in_yyyy_mm_dd" />

            <TextView
                android:id="@+id/TVSignUpPassword"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginTop="4dp" />

            <EditText
                android:id="@+id/ETSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:ems="10"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/TVSignUpPasswordExplain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/must_include_at_least_1_uppercase_letter_lowercase_letter_numeric_character_and_special_character"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/TVSignUpConfirmPassword"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:layout_marginTop="4dp"/>

            <EditText
                android:id="@+id/ETSignUpConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:ems="10"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/BtnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_up"
                android:layout_marginTop="4dp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>