<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pre_order_food_foodSelectTitle"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/select_food"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@+id/pre_order_food_foodSelectTitle"
        app:layout_constraintBottom_toTopOf="@id/pre_order_food_buttonSkipNow"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pre_order_food_listMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/preorder_foodselect_recyclerview" />

    </ScrollView>

    <Button
        android:id="@+id/pre_order_food_buttonSkipNow"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_now"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/pre_order_food_feesLayout" />

    <LinearLayout
        android:id="@+id/pre_order_food_feesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="6dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/pre_order_food_bottomNavLayout"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            
            android:text="@string/total_fees"
            android:textAlignment="textEnd"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/pre_order_food_fees"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="RM 0.00"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pre_order_food_bottomNavLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pre_order_food_backButton"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/black"
            android:textColor="@color/white"
            android:text="@string/back_button"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/pre_order_food_nextButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:background="?attr/colorPrimary"
            android:text="@string/next_button"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textColor="?attr/colorOnPrimary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pre_order_food_cancelButton"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/black"
            android:textColor="@color/white"
            android:text="@string/cancel_button"
            android:textAllCaps="false" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>