<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wia2007.project.tablebooking.ManageBookingFutureActivity" >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/manageBooking_MenuActLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/manageBooking_TB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.ActionBar" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/manageBooking_MenuActLayout"
        app:layout_constraintBottom_toTopOf="@+id/manageBooking_layoutButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_name"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/manageBooking_Future_name"
                style="@style/TextAppearance.AppCompat.Body1"
                android:paddingVertical="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/manageBooking_Future_person"
                style="@style/TextAppearance.AppCompat.Body1"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/person"/>

            <TextView
                android:id="@+id/manageBooking_Future_date"
                style="@style/TextAppearance.AppCompat.Body1"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/vector"/>

            <TextView
                android:id="@+id/manageBooking_Future_time"
                style="@style/TextAppearance.AppCompat.Body1"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/access_time"/>

            <TextView
                android:id="@+id/manageBooking_Future_table"
                style="@style/TextAppearance.AppCompat.Body1"
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_table_restaurant_24" />


            <TextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/request"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/manageBooking_Future_request"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-" />


            <TextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/food"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/manageBooking_Future_foodList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/foodlist_recyclerview"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/manageBooking_layoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/manageBooking_Future_editBookingButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:background="?attr/colorPrimary"
            android:text="@string/edit_booking_button"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textColor="?attr/colorOnPrimary"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/manageBooking_Future_cancelBookingButton"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:background="@color/black"
            android:textColor="@color/white"
            android:text="@string/cancel_button"
            android:textAllCaps="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


